--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698186472-technical-product-owner-data-transformation'>TitanData Inc. Technical Product Owner - Data Transformation | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698184261-technical-product-owner-digital-offers-and-promotions'>TitanData Inc. Technical Product Owner - Digital Offers and Promotions | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oSuuafwK'>Santander Consumer USA Careers - Product Manager II</a></h5> 
+<p><span class="badge badge-light">Dallas, Texas</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/ayla-networks/job/othebfwT'>Ayla Networks Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -60,7 +76,7 @@
 <p><span class="badge badge-light">Warren, MI</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -86,7 +102,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -116,15 +132,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698375427-senior-product-manager-growth-m-f-d-'>Omio Senior Product Manager Growth (m / f / d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698375427-senior-product-manager-growth-m-f-d-'>Omio Senior Product Manager Growth (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trademe/job/o2rrbfwP'>Trade Me Careers - Product Manager - Senior</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trademe/job/o2rrbfwP'>Trade Me Careers - Product Manager - Senior</a></h5> 
 <p><span class="badge badge-light">New Zealand  New Zealand</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698374989-senior-product-manager-flights-air-m-f-d-'>Omio Senior Product Manager Flights/Air (m / f / d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698374989-senior-product-manager-flights-air-m-f-d-'>Omio Senior Product Manager Flights/Air (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -136,7 +152,7 @@
 <p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/senior-product-manager-legal-systems/'>Senior Product Manager, Legal Systems | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/senior-product-manager-legal-systems/'>Senior Product Manager, Legal Systems | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -144,7 +160,7 @@
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698364962-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698364962-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -186,7 +202,7 @@
 <p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://hellomavis.com/job/senior-product-manager-for-healthcare-app-3/'>Senior Product Manager (for Healthcare App) - Mavis</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hellomavis.com/job/senior-product-manager-for-healthcare-app-3/'>Senior Product Manager (for Healthcare App) - Mavis</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -218,7 +234,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Allegro/743999698351306-product-manager-katalog-produktow'>Allegro Product Manager - Katalog Produkt?w | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Allegro/743999698351306-product-manager-katalog-produktow'>Allegro Product Manager - Katalog Produkt?w | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -264,7 +280,7 @@
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -296,7 +312,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Apply to Senior Product Manager at FastPay in Framingham, MA.</p>
 <hr/>
-<h5><a href='https://theorem.applytojob.com/apply/kIRkn2iqvO/Senior-Product-Manager-REMOTE'>Senior Product Manager REMOTE - Theorem, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theorem.applytojob.com/apply/kIRkn2iqvO/Senior-Product-Manager-REMOTE'>Senior Product Manager REMOTE - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... We're looking for an experienced product manager to join the team at Theorem. It 
 is expected that you have lived the full product lifecycle, having brought mult.</p>
@@ -306,7 +322,7 @@ is expected that you have lived the full product lifecycle, having brought mult.
 <p>4 days ago ... Apply to Senior Product Manager - Resy Global Service at Resy Network Inc in 
 New York, NY.</p>
 <hr/>
-<h5><a href='https://vkb.join.com/jobs/460742-product-designer-ux-ui-m-w-d'>Job @ uptodate Ventures (Munich): Product Designer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vkb.join.com/jobs/460742-product-designer-ux-ui-m-w-d'>Job @ uptodate Ventures (Munich): Product Designer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -320,7 +336,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/oy6obfwX'>Internet Brands Careers - Associate Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oy6obfwX'>Internet Brands Careers - Associate Product Manager</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -398,7 +414,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qn79Vfwi&k=Job&j=o8KJafwv&__jvst=Employee&__jvsd=sq7Ckiwg&__jvsc=Twitter&bid=nI7EmMw6'>Product Manager | Trustwave Careers</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qn79Vfwi&k=Job&j=o8KJafwv&__jvst=Employee&__jvsd=sq7Ckiwg&__jvsc=Twitter&bid=nI7EmMw6'>Product Manager | Trustwave Careers</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -443,22 +459,6 @@ New York, NY.</p>
 <h5><a href='https://jobs.lever.co/hellooffice/f4551972-7b47-4da2-a86c-c14bd6e4bb2f'>HelloOffice - Senior Product Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698319788-senior-product-designer-point-of-sale'>Square Senior Product Designer, Point of Sale | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698320437-sr-product-manager-digital-products-merchant-services'>Visa Sr. Product Manager, Digital Products, Merchant Services | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Foster City, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/shopify/e1b101da-0eb5-4273-9a3e-6bc6748ac157'>Shopify - Product Designer - Themes</a></h5> 
-<p><span class="badge badge-light">Montreal, Canada</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://authenticjobs.com/jobs/31692?r=rss2'>Authentic Jobs Product Designer at Livefront at Livefront</a></h5> 
-<p><span class="badge badge-light">Minneapolis, MN</span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
